@@ -12,6 +12,7 @@ import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 @Repository
@@ -39,14 +40,14 @@ public class ReviewDbStorage implements ReviewStorage {
             return stmt;
         }, keyHolder);
 
-        review.setReviewId(keyHolder.getKey().longValue());
+        review.setReviewId(Objects.requireNonNull(keyHolder.getKey()).longValue());
         return review;
     }
 
     private void checkUserExists(Long userId) {
         String sql = "SELECT COUNT(*) FROM users WHERE id = ?";
         Integer count = jdbcTemplate.queryForObject(sql, Integer.class, userId);
-        if (count == null || count == 0) {
+        if (count == 0) {
             throw new NotFoundException("Пользователь с ID " + userId + " не найден");
         }
     }
@@ -54,7 +55,7 @@ public class ReviewDbStorage implements ReviewStorage {
     private void checkFilmExists(Long filmId) {
         String sql = "SELECT COUNT(*) FROM films WHERE id = ?";
         Integer count = jdbcTemplate.queryForObject(sql, Integer.class, filmId);
-        if (count == null || count == 0) {
+        if (count == 0) {
             throw new NotFoundException("Фильм с ID " + filmId + " не найден");
         }
     }
@@ -62,7 +63,7 @@ public class ReviewDbStorage implements ReviewStorage {
     private void checkReviewExists(Long reviewId) {
         String sql = "SELECT COUNT(*) FROM reviews WHERE id = ?";
         Integer count = jdbcTemplate.queryForObject(sql, Integer.class, reviewId);
-        if (count == null || count == 0) {
+        if (count == 0) {
             throw new NotFoundException("Отзыв с ID " + reviewId + " не найден");
         }
     }
@@ -71,7 +72,7 @@ public class ReviewDbStorage implements ReviewStorage {
     public Review update(Review review) {
         String sql = "UPDATE reviews SET content = ?, is_positive = ? WHERE id = ?";
         jdbcTemplate.update(sql, review.getContent(), review.getIsPositive(), review.getReviewId());
-        return review;
+        return findById(review.getReviewId()).orElseThrow();
     }
 
     @Override
@@ -84,7 +85,7 @@ public class ReviewDbStorage implements ReviewStorage {
     public Optional<Review> findById(Long reviewId) {
         String sql = "SELECT * FROM reviews WHERE id = ?";
         List<Review> reviews = jdbcTemplate.query(sql, this::mapRowToReview, reviewId);
-        return reviews.isEmpty() ? Optional.empty() : Optional.of(reviews.get(0));
+        return reviews.isEmpty() ? Optional.empty() : Optional.of(reviews.getFirst());
     }
 
     @Override
@@ -104,25 +105,21 @@ public class ReviewDbStorage implements ReviewStorage {
         checkReviewExists(reviewId);
         checkUserExists(userId);
 
-        // проверяею существующий голос
         String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
         List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
                 (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
 
         if (!existingVotes.isEmpty()) {
-            Boolean existingVote = existingVotes.get(0);
+            Boolean existingVote = existingVotes.getFirst();
             if (existingVote) {
-                // Уже лайкнул
                 return findById(reviewId).orElseThrow();
             } else {
-                // был диз, тогдп меняю на лайк (+2 к useful)
                 String updateSql = "UPDATE reviews SET useful = useful + 2 WHERE id = ?";
                 jdbcTemplate.update(updateSql, reviewId);
                 String updateLikeSql = "UPDATE review_likes SET is_like = true WHERE review_id = ? AND user_id = ?";
                 jdbcTemplate.update(updateLikeSql, reviewId, userId);
             }
         } else {
-            // новый лайк
             String updateSql = "UPDATE reviews SET useful = useful + 1 WHERE id = ?";
             jdbcTemplate.update(updateSql, reviewId);
             String insertSql = "INSERT INTO review_likes (review_id, user_id, is_like) VALUES (?, ?, true)";
@@ -137,25 +134,21 @@ public class ReviewDbStorage implements ReviewStorage {
         checkReviewExists(reviewId);
         checkUserExists(userId);
 
-        // проверяю существующий голос
         String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
         List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
                 (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
 
         if (!existingVotes.isEmpty()) {
-            Boolean existingVote = existingVotes.get(0);
+            Boolean existingVote = existingVotes.getFirst();
             if (!existingVote) {
-                // уже дизлайкнул
                 return findById(reviewId).orElseThrow();
             } else {
-                // был лайк, тогда меняю на дизлайк (-2 к useful)
                 String updateSql = "UPDATE reviews SET useful = useful - 2 WHERE id = ?";
                 jdbcTemplate.update(updateSql, reviewId);
                 String updateLikeSql = "UPDATE review_likes SET is_like = false WHERE review_id = ? AND user_id = ?";
                 jdbcTemplate.update(updateLikeSql, reviewId, userId);
             }
         } else {
-            // новый диз
             String updateSql = "UPDATE reviews SET useful = useful - 1 WHERE id = ?";
             jdbcTemplate.update(updateSql, reviewId);
             String insertSql = "INSERT INTO review_likes (review_id, user_id, is_like) VALUES (?, ?, false)";
@@ -174,8 +167,7 @@ public class ReviewDbStorage implements ReviewStorage {
         List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
                 (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
 
-        if (!existingVotes.isEmpty() && existingVotes.get(0)) {
-            // удаляю только если был лайк
+        if (!existingVotes.isEmpty() && existingVotes.getFirst()) {
             String updateSql = "UPDATE reviews SET useful = useful - 1 WHERE id = ?";
             jdbcTemplate.update(updateSql, reviewId);
             String deleteSql = "DELETE FROM review_likes WHERE review_id = ? AND user_id = ?";
@@ -193,7 +185,6 @@ public class ReviewDbStorage implements ReviewStorage {
                 (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
 
         if (!existingVotes.isEmpty() && !existingVotes.get(0)) {
-            // удаляю только если был дизлайк
             String updateSql = "UPDATE reviews SET useful = useful + 1 WHERE id = ?";
             jdbcTemplate.update(updateSql, reviewId);
             String deleteSql = "DELETE FROM review_likes WHERE review_id = ? AND user_id = ?";
